Fix vertical overflow from unnecessary grid container in mainContent.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,13 +15,13 @@ body {
 
 .bodyContainer {
     position: relative;
-    min-height: 100vh;
     background-color: var(--offWhite);
     display: flex;
     font-family: 'Heebo', sans-serif;
 }
 
 .sidebar {
+    min-height: 100vh;
     flex: 0, 1, auto;
     background-color: var(--lightBlue);
     box-shadow: 3px 0 3px 3px var(--halfBlack);
@@ -29,7 +29,4 @@ body {
 
 .mainContent {
     flex: 1;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 4fr;
 }
